[FIX] web: accentuate the carret contrast
Before, carret was not contrasted enough which made it less visible.
Now, it's more contrasted and visible.

--- a/addons/web/static/src/legacy/scss/fields.scss
+++ b/addons/web/static/src/legacy/scss/fields.scss
@@ -9,18 +9,22 @@
 
 :root {
     @include print-variable(o-input-border-color, $o-form-lightsecondary);
+    @include print-variable(o-caret-color, $input-color);
 }
 
 .o_required_modifier {
     @include print-variable(o-input-border-color, $o-input-border-required);
+    @include print-variable(o-caret-color, $o-input-border-required);
 }
 
 .o_field_widget:focus-within {
     @include print-variable(o-input-border-color, $o-brand-primary);
+    @include print-variable(o-caret-color, $o-brand-primary);
 }
 
 .o_field_invalid {
     @include print-variable(o-input-border-color, map-get($theme-colors, 'danger'));
+    @include print-variable(o-caret-color, map-get($theme-colors, 'danger'));
 }
 
 //------------------------------------------------------------------------------
